--- a/app/src/main/res/layout/activity_car_listing_item.xml
+++ b/app/src/main/res/layout/activity_car_listing_item.xml
@@ -66,7 +66,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="2dp"
                 android:alpha="1"
-                android:text="Apple CarPlay & Android Auto"
+                android:text="Apple CarPlay Android Auto"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/carMileageTextView" />
