--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -167,7 +167,7 @@
                 android:layout_height="54dp"
                 android:layout_marginTop="20dp"
                 android:backgroundTint="#135a62"
-                android:text="Start Purchase"
+                android:text="Buy Now"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/carFuelTextView" />
