--- a/app/src/main/res/layout/activity_car_list_item.xml
+++ b/app/src/main/res/layout/activity_car_list_item.xml
@@ -66,7 +66,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="2dp"
                 android:alpha="1"
-                android:text="Apple CarPlay Android Auto"
+                android:text="Apple CarPlay &amp; Android Auto"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/carMileageTextView" />
@@ -93,22 +93,6 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/pricePrefixTextView"
                 app:layout_constraintTop_toBottomOf="@+id/carHighlightsTextView" />
-
-            <Button
-                android:id="@+id/addToFavouriteBtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
-                android:backgroundTint="#135a62"
-                android:paddingStart="50dp"
-                android:paddingEnd="50dp"
-                android:text="Add To Favourite"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/carPriceTextView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
