--- a/app/src/main/res/layout/activity_car_list_item.xml
+++ b/app/src/main/res/layout/activity_car_list_item.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_gallery" />
+                app:srcCompat="@drawable/default_image" />
 
             <TextView
                 android:id="@+id/carTitleTextView"
