--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -1,9 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.CheckoutActivity">
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/btn_back_checkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_back_arrow"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="Back" />
+
+        <TextView
+            android:id="@+id/tv_car_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Car Title"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/btn_back_checkout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_car_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Car Price"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:paddingBottom="4dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_car_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_car_color"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Car Color"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:paddingBottom="4dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_car_price"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_car_engine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Car Engine"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:paddingBottom="4dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_car_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_car_fuel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Car Fuel"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:paddingBottom="4dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_car_engine"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_delivery_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Delivery Information"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingTop="16dp"
+            android:paddingBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_car_fuel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Name"
+            android:inputType="textPersonName"
+            app:layout_constraintTop_toBottomOf="@id/tv_delivery_info"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_address"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Address"
+            android:inputType="textPostalAddress"
+            app:layout_constraintTop_toBottomOf="@id/et_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_phone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Phone Number"
+            android:inputType="phone"
+            app:layout_constraintTop_toBottomOf="@id/et_address"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintTop_toBottomOf="@id/et_phone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_billing_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Billing Information"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingTop="16dp"
+            android:paddingBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/et_email"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_credit_card"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Credit Card Number"
+            android:inputType="number"
+            app:layout_constraintTop_toBottomOf="@id/tv_billing_info"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_credit_card_expiry"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Expiry Date (MM/YY)"
+            android:inputType="text"
+            app:layout_constraintTop_toBottomOf="@id/et_credit_card"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/et_credit_card_cvv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="CVV"
+            android:inputType="numberPassword"
+            app:layout_constraintTop_toBottomOf="@id/et_credit_card_expiry"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/btn_confirm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Confirm Order"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="#6200EE"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@id/et_credit_card_cvv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
