--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,6 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageButton
+            android:id="@+id/btn_back_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_back_arrow"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="Back" />
+
         <TextView
             android:id="@+id/tv_register"
             android:layout_width="0dp"
@@ -18,7 +28,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:gravity="center"
             android:paddingBottom="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_back_register"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -67,7 +77,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-
         <Button
             android:id="@+id/btn_register"
             android:layout_width="0dp"
@@ -76,6 +85,18 @@
             android:backgroundTint="#6200EE"
             android:textColor="#FFFFFF"
             app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_already_have_account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Already have an account?"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:gravity="center"
+            android:paddingTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/btn_register"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
