--- a/app/src/main/res/layout-land/activity_car_detail.xml
+++ b/app/src/main/res/layout-land/activity_car_detail.xml
@@ -18,6 +18,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/logo_image"
+        android:layout_width="70dp"
+        android:layout_height="65dp"
+        android:src="@drawable/logo"
+        android:layout_margin="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="11dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
