--- a/app/src/main/res/layout-land/activity_car_list.xml
+++ b/app/src/main/res/layout-land/activity_car_list.xml
@@ -21,6 +21,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/logo_image"
+        android:layout_width="70dp"
+        android:layout_height="66dp"
+        android:src="@drawable/logo"
+        android:layout_margin="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="11dp" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
         android:layout_width="wrap_content"
