--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="#80000000"
         android:elevation="10dp"
-        android:padding="16dp"
+        android:padding="8dp"
         android:text="Shop Cars"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -18,6 +18,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/logo_image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/logo"
+        android:layout_margin="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="11dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
