--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ImageView
+        android:id="@+id/logo_image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/logo"
+        android:layout_margin="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="11dp" />
+
     <TextView
         android:id="@+id/heading"
         android:layout_width="0dp"
@@ -23,11 +33,11 @@
         android:textStyle="bold"
         android:textSize="24sp"
         android:textColor="@android:color/white"
-        android:padding="16dp"
+        android:padding="11dp"
         android:background="#80000000"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/logo_image"
         android:elevation="10dp" />
 
     <androidx.cardview.widget.CardView
